--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             
 
             <div class="scroll-container">
-                <img src="/Portfolio/assets/images/NyPDev.png" alt="Portfolio webpage">
-                <img src="/Portfolio/assets/images/Cukor.png" alt="CukorFonal webpage">
+                <img src="./assets/images/NyPDev.png" alt="Portfolio webpage">
+                <img src="./assets/images/Cukor.png" alt="CukorFonal webpage">
                 
               </div>
         </div>
